# kubernetes-mcp-server.py

./: .gitignore  README.md  pyproject.toml  server.py
src/: utils.py
src/cmd/: server.py
